<resources>
    <string name="app_name">Program_5</string>
    <string name="pound_inch">pound/inch</string>
    <string name="kilogram_meter">kilogram/meter</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="bmi">BMI</string>
    <string name="height">Height</string>
    <string name="enter_weight_in_inches">Enter weight in inches</string>
    <string name="enter_height_in_inches">Enter height in inches</string>
    <string name="enter_weight_in_pounds">enter_weight_in_pounds</string>
    <string name="pounds_inches">pounds/inches</string>
    <string name="kilogram_meters">kilogram/meters</string>
    <string name="lbs">Enter weight in pounds</string>
    <string name="get_advice">GET ADVICE</string>
    <string name="BMI">CALCULATE BMI</string>
    <string name="weight">Weight</string>
</resources>
